create good morning massage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Elia Driesner</title>
 </head>
 <body>
+    <h1 id="message"></h1>
+
+
     <script src="assets/index.js">
 
     </script>
